--- a/index.html
+++ b/index.html
@@ -39,40 +39,6 @@
 		<title>YR Player</title>
 	</head>
 	<body data-theme="dark">
-		<div class="ad-modal">
-			<div class="banner-modal-ad">
-				<div class="banner-modal-ad__content">
-					<img src="./src/img/Logo.png" alt="Logo" />
-					<div>Have Fun With my Music Player !!!</div>
-				</div>
-				<a class="banner-modal-ad-link" href="#">
-					<i class="fas fa-crown"></i>
-					<span> Go Premium </span>
-				</a>
-			</div>
-		</div>
-		<div class="new-pl-modal">
-			<div class="new-pl-banner__overlay"></div>
-			<div class="new-pl-banner">
-				<div class="new-pl-banner__content">
-					<div>
-						<span> Playlist Name </span>
-						<input type="text" placeholder="Type Playlist Name" />
-					</div>
-					<div>
-						<span> Owner </span>
-						<input type="text" placeholder="Type Owner Name" />
-					</div>
-					<a class="new-pl-link" href="#">
-						<i class="bi bi-plus-square"></i>
-						<span> Create Playlist </span>
-					</a>
-				</div>
-			</div>
-		</div>
-
-		<div class="uploadUI"></div>
-
 		<div class="main-container">
 			<div class="category-sidebar">
 				<div class="title">
@@ -154,6 +120,7 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="main-content">
 				<div id="top" class="top-bar">
 					<div class="parts">
@@ -550,6 +517,7 @@
 					</span>
 				</div>
 			</div>
+
 			<div class="playlist-sidebar">
 				<div class="top-bar">
 					<div class="left">
@@ -561,6 +529,7 @@
 						<i class="bi bi-three-dots ico ico--click"></i>
 					</div>
 				</div>
+
 				<div class="content playlist-tab">
 					<div class="now-play">
 						<div class="song-item">
@@ -580,212 +549,12 @@
 						<div class="title">
 							<span>Next Song</span>
 						</div>
-						<div class="song-list">
-							<div class="song-item">
-								<img src="" alt="song img" />
-								<div class="left">
-									<div class="left-content">
-										<div class="song-title">Nevada</div>
-										<div class="song-artist">Vicetone</div>
-									</div>
-								</div>
-								<div class="right">
-									<div class="duration">3:00</div>
-								</div>
-							</div>
-							<div class="song-item">
-								<img src="" alt="song img" />
-								<div class="left">
-									<div class="left-content">
-										<div class="song-title">Nevada</div>
-										<div class="song-artist">Vicetone</div>
-									</div>
-								</div>
-								<div class="right">
-									<div class="duration">3:00</div>
-								</div>
-							</div>
-							<div class="song-item">
-								<img src="" alt="song img" />
-								<div class="left">
-									<div class="left-content">
-										<div class="song-title">
-											Shape Of You
-										</div>
-										<div class="song-artist">
-											Ed Sheeran
-										</div>
-									</div>
-								</div>
-								<div class="right">
-									<div class="duration">3:00</div>
-								</div>
-							</div>
-							<div class="song-item">
-								<img src="" alt="song img" />
-								<div class="left">
-									<div class="left-content">
-										<div class="song-title">
-											Cheri Cheri Lady
-										</div>
-										<div class="song-artist">
-											Modern Talking
-										</div>
-									</div>
-								</div>
-								<div class="right">
-									<div class="duration">3:00</div>
-								</div>
-							</div>
-							<div class="song-item">
-								<img src="" alt="song img" />
-								<div class="left">
-									<div class="left-content">
-										<div class="song-title">Nevada</div>
-										<div class="song-artist">Vicetone</div>
-									</div>
-								</div>
-								<div class="right">
-									<div class="duration">3:00</div>
-								</div>
-							</div>
-							<div class="song-item">
-								<img src="" alt="song img" />
-								<div class="left">
-									<div class="left-content">
-										<div class="song-title">Nevada</div>
-										<div class="song-artist">Vicetone</div>
-									</div>
-								</div>
-								<div class="right">
-									<div class="duration">3:00</div>
-								</div>
-							</div>
-							<div class="song-item">
-								<img src="" alt="song img" />
-								<div class="left">
-									<div class="left-content">
-										<div class="song-title">
-											Shape Of You
-										</div>
-										<div class="song-artist">
-											Ed Sheeran
-										</div>
-									</div>
-								</div>
-								<div class="right">
-									<div class="duration">3:00</div>
-								</div>
-							</div>
-							<div class="song-item">
-								<img src="" alt="song img" />
-								<div class="left">
-									<div class="left-content">
-										<div class="song-title">
-											Cheri Cheri Lady
-										</div>
-										<div class="song-artist">
-											Modern Talking
-										</div>
-									</div>
-								</div>
-								<div class="right">
-									<div class="duration">3:00</div>
-								</div>
-							</div>
-						</div>
+						<div class="song-list"></div>
 					</div>
 				</div>
+
 				<div class="content recent-tab">
 					<div class="song-list">
-						<div class="song-item">
-							<img src="" alt="song img" />
-							<div class="left">
-								<div class="left-content">
-									<div class="song-title">Nevada</div>
-									<div class="song-artist">Vicetone</div>
-								</div>
-							</div>
-							<div class="right">
-								<div class="duration">3:00</div>
-							</div>
-						</div>
-						<div class="song-item">
-							<img src="" alt="song img" />
-							<div class="left">
-								<div class="left-content">
-									<div class="song-title">Nevada</div>
-									<div class="song-artist">Vicetone</div>
-								</div>
-							</div>
-							<div class="right">
-								<div class="duration">3:00</div>
-							</div>
-						</div>
-						<div class="song-item">
-							<img src="" alt="song img" />
-							<div class="left">
-								<div class="left-content">
-									<div class="song-title">Shape Of You</div>
-									<div class="song-artist">Ed Sheeran</div>
-								</div>
-							</div>
-							<div class="right">
-								<div class="duration">3:00</div>
-							</div>
-						</div>
-						<div class="song-item">
-							<img src="" alt="song img" />
-							<div class="left">
-								<div class="left-content">
-									<div class="song-title">
-										Cheri Cheri Lady
-									</div>
-									<div class="song-artist">
-										Modern Talking
-									</div>
-								</div>
-							</div>
-							<div class="right">
-								<div class="duration">3:00</div>
-							</div>
-						</div>
-						<div class="song-item">
-							<img src="" alt="song img" />
-							<div class="left">
-								<div class="left-content">
-									<div class="song-title">Nevada</div>
-									<div class="song-artist">Vicetone</div>
-								</div>
-							</div>
-							<div class="right">
-								<div class="duration">3:00</div>
-							</div>
-						</div>
-						<div class="song-item">
-							<img src="" alt="song img" />
-							<div class="left">
-								<div class="left-content">
-									<div class="song-title">Nevada</div>
-									<div class="song-artist">Vicetone</div>
-								</div>
-							</div>
-							<div class="right">
-								<div class="duration">3:00</div>
-							</div>
-						</div>
-						<div class="song-item">
-							<img src="" alt="song img" />
-							<div class="left">
-								<div class="left-content">
-									<div class="song-title">Shape Of You</div>
-									<div class="song-artist">Ed Sheeran</div>
-								</div>
-							</div>
-							<div class="right">
-								<div class="duration">3:00</div>
-							</div>
-						</div>
 						<div class="song-item">
 							<img src="" alt="song img" />
 							<div class="left">
@@ -807,67 +576,7 @@
 			</div>
 		</div>
 
-		<div class="player-control">
-			<div class="song-info">
-				<div class="media-img">
-					<img src="" alt="Song Img" />
-				</div>
-				<div class="media-content">
-					<div class="title">Song Name</div>
-					<div class="artist">Unknown Artist</div>
-				</div>
-				<div class="media-option">
-					<i class="bi bi-heart ico ico--click"></i>
-					<i class="bi-three-dots ico ico--click"></i>
-				</div>
-			</div>
-			<div class="controller">
-				<div class="part1">
-					<i class="bi bi-shuffle ico ico--click"></i>
-					<i class="bi bi-skip-backward ico ico--click"></i>
-					<div class="play-and-pause">
-						<i class="bi bi-play-circle ico--click"></i>
-						<i class="bi bi-pause ico--click"></i>
-					</div>
-					<i class="bi bi-skip-forward ico ico--click"></i>
-					<i class="bi bi-arrow-repeat ico ico--click"></i>
-				</div>
-				<div class="part2">
-					<div class="left-time">00:00</div>
-					<div class="duration-container">
-						<input
-							id="progress"
-							class="duration ico--click"
-							type="range"
-							value="0"
-							step="1"
-							min="0"
-							max="100"
-						/>
-					</div>
-					<div class="right-time">99:99</div>
-				</div>
-			</div>
-			<div class="player-tools">
-				<div class="left">
-					<i class="bi bi-mic ico ico--click"></i>
-					<i class="bi bi-volume-up ico ico--click">
-						<input
-							id="volume"
-							class="volume ico--click"
-							type="range"
-							value="100"
-							step="2"
-							min="0"
-							max="100"
-						/>
-					</i>
-				</div>
-				<div class="vertical-line"></div>
-				<i class="bi bi-music-note-list ico ico--click"></i>
-			</div>
-			<audio class="hide now-play"></audio>
-		</div>
+		<script src="./src/js/render.js"></script>
 		<script src="https://cdn.jsdelivr.net/gh/napthedev/nhaccuatui-api-full@bundle/build/bundle.js"></script>
 		<script src="./src/js/script.js"></script>
 	</body>
