--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 							<i class="bi bi-arrow-right top-ico ico--click"></i>
 							<div class="search-bar">
 								<input
+									autocomplete="off"
 									type="text"
 									name="search"
 									id="search"
