--- a/index.html
+++ b/index.html
@@ -56,40 +56,7 @@
 								/>
 								<ul class="suggest-list">
 									<div class="title">Suggest for You</div>
-									<div class="content">
-										<li class="suggest-item">
-											<i class="fas fa-chart-line"></i>
-											<span> Suggest Item 1</span>
-										</li>
-										<li class="suggest-item">
-											<i class="fas fa-chart-line"></i>
-											<span> Suggest Item 2</span>
-										</li>
-										<li class="suggest-item">
-											<i class="fas fa-chart-line"></i>
-											<span> Suggest Item 3</span>
-										</li>
-										<li class="suggest-item">
-											<i class="fas fa-chart-line"></i>
-											<span> Suggest Item 4</span>
-										</li>
-										<li class="suggest-item">
-											<i class="fas fa-chart-line"></i>
-											<span> Suggest Item 5</span>
-										</li>
-										<li class="suggest-item">
-											<i class="fas fa-chart-line"></i>
-											<span> Suggest Item 6</span>
-										</li>
-										<li class="suggest-item">
-											<i class="fas fa-chart-line"></i>
-											<span> Suggest Item 7</span>
-										</li>
-										<li class="suggest-item">
-											<i class="fas fa-chart-line"></i>
-											<span> Suggest Item 8</span>
-										</li>
-									</div>
+									<div class="content"></div>
 								</ul>
 							</div>
 						</div>
@@ -98,88 +65,12 @@
 								<i
 									class="bi bi-circle-square top-ico ico--click"
 								></i>
-								<div class="theme-panel">
-									<div class="theme-item item1">
-										<span> Dark </span>
-									</div>
-									<div class="theme-item item2">
-										<span> Light </span>
-									</div>
-									<div class="theme-item item3">
-										<span> Green </span>
-									</div>
-									<div class="theme-item item4">
-										<span> Blue </span>
-									</div>
-									<div class="theme-item item5">
-										<span> Pink </span>
-									</div>
-									<div class="theme-item item6">
-										<span> Orange </span>
-									</div>
-								</div>
+								<div class="theme-panel"></div>
 							</div>
 							<div class="icon item setting-ico">
 								<i class="bi bi-sliders top-ico ico--click"></i>
 								<div class="setting-panel">
-									<ul class="setting-list">
-										<li class="setting-item">
-											<i class="bi bi-slash-circle"></i>
-											<span> Block List </span>
-										</li>
-										<li class="setting-item music-quality">
-											<i class="bi bi-badge-hd"></i>
-											<span> Music Quality </span>
-											<div class="quality-panel">
-												<div class="quality-item">
-													<input
-														type="radio"
-														id="SQ"
-														name="quality"
-													/>
-													<label for="SQ">
-														<span> SQ - 128 </span>
-														<p>
-															For Slow Connection
-														</p>
-													</label>
-												</div>
-												<div class="quality-item">
-													<input
-														type="radio"
-														id="HQ"
-														name="quality"
-														checked
-													/>
-													<label for="HQ">
-														<span> HQ - 320 </span>
-														<p>Better Quality</p>
-													</label>
-												</div>
-											</div>
-										</li>
-										<li class="setting-item">
-											<i class="bi bi-play-circle"></i>
-											<span> This Player </span>
-										</li>
-										<div class="horizone-line"></div>
-										<li class="setting-item">
-											<i class="bi bi-info-circle"></i>
-											<span> Introduce </span>
-										</li>
-										<li class="setting-item">
-											<i class="bi bi-flag"></i>
-											<span> Report </span>
-										</li>
-										<li class="setting-item">
-											<i class="bi bi-telephone"></i>
-											<span> Contact </span>
-										</li>
-										<li class="setting-item">
-											<i class="bi bi-shield-check"></i>
-											<span> Privacy </span>
-										</li>
-									</ul>
+									<ul class="setting-list"></ul>
 								</div>
 							</div>
 							<div class="icon item upload-ico">
