--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
 		<link rel="stylesheet" href="./src/css/animation.css" />
 		<link rel="stylesheet" href="./src/css/style.css" />
 		<link rel="stylesheet" href="./src/css/theme.css" />
-		<link rel="stylesheet" href="./src/css/main_content.css" />
-		<link rel="stylesheet" href="./src/css/player_control.css" />
-		<link rel="stylesheet" href="./src/css/category_sidebar.css" />
-		<link rel="stylesheet" href="./src/css/playlist-sidebar.css" />
-		<link rel="stylesheet" href="./src/css/responsive.css" />
+		<link rel="stylesheet" href="./src/css/index.css" />
 		<title>YR Player</title>
 	</head>
 	<body data-theme="dark">
