Fix Bugs which checked on W3C

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 									id="search"
 									placeholder="Type name of artist, song, ..."
 								/>
-								<ul class="suggest-list">
+								<div class="suggest-list">
 									<div class="title">Suggest for You</div>
-									<div class="content"></div>
-								</ul>
+									<ul class="content"></ul>
+								</div>
 							</div>
 						</div>
 						<div class="part2">
