--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" href="./src/img/Logo.png" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.3.0/font-awesome-animation.css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 		<link href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.3.0/font-awesome-animation.css" />
 		<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 		<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 		<link rel="stylesheet" href="./src/css/index.css" />
@@ -22,13 +22,7 @@
 							<i class="bi bi-arrow-left top-ico ico--click"></i>
 							<i class="bi bi-arrow-right top-ico ico--click"></i>
 							<div class="search-bar">
-								<input
-									autocomplete="off"
-									type="text"
-									name="search"
-									id="search"
-									placeholder="Type name of artist, song, ..."
-								/>
+								<input autocomplete="off" type="text" name="search" id="search" placeholder="Type name of artist, song, ..." />
 								<div class="suggest-list">
 									<div class="title">Suggest for You</div>
 									<ul class="content"></ul>
@@ -37,9 +31,7 @@
 						</div>
 						<div class="part2">
 							<div class="icon item theme-ico">
-								<i
-									class="bi bi-circle-square top-ico ico--click"
-								></i>
+								<i class="bi bi-circle-square top-ico ico--click"></i>
 								<div class="theme-panel"></div>
 							</div>
 							<div class="icon item setting-ico">
@@ -49,24 +41,13 @@
 								</div>
 							</div>
 							<div class="icon item upload-ico">
-								<input
-									type="file"
-									accept=".mp4, .mp3"
-									name="upload-song"
-									id="upload-song"
-									multiple
-								/>
+								<input type="file" accept=".mp4, .mp3" name="upload-song" id="upload-song" multiple />
 								<label for="upload-song">
-									<i class="bi bi-upload top-ico ico--click">
-									</i>
+									<i class="bi bi-upload top-ico ico--click"></i>
 								</label>
 							</div>
 							<div class="item personal-ico">
-								<img
-									class="ava-img"
-									src="./src/img/Logo.png"
-									alt="Avatar"
-								/>
+								<img class="ava-img" src="./src/img/Logo.png" alt="Avatar" />
 							</div>
 						</div>
 					</div>
@@ -97,54 +78,25 @@
 								</span>
 								<div class="title-right">
 									<div class="upload-song">
-										<input
-											type="file"
-											accept=".mp4, .mp3"
-											name="upload-song"
-											id="upload-song2"
-											multiple
-										/>
-										<label
-											for="upload-song2"
-											class="ico--click"
-										>
-											<i
-												class="bi bi-upload ico ico--click"
-											>
-											</i>
+										<input type="file" accept=".mp4, .mp3" name="upload-song" id="upload-song2" multiple />
+										<label for="upload-song2" class="ico--click" >
+											<i class="bi bi-upload ico ico--click" ></i>
 											<span>Upload</span>
 										</label>
 									</div>
 									<div class="play-all">
-										<i
-											class="bi bi-play ico ico--click"
-										></i>
+										<i class="bi bi-play ico ico--click"></i>
 										<span>Play All</span>
 									</div>
 								</div>
 							</div>
 							<div class="section-content">
 								<div class="img-preview">
-									<img
-										src="./src/img/EdSheeran.png"
-										alt="Shape Of You"
-									/>
-									<img
-										src="./src/img/SummerTime.png"
-										alt="Summer Time"
-									/>
-									<img
-										src="./src/img/SavageLove.png"
-										alt="Savage Love"
-									/>
-									<img
-										src="./src/img/Nevada.png"
-										alt="Nevada"
-									/>
-									<img
-										src="./src/img/ModernTalking.png"
-										alt="Cheri Cheri Lady"
-									/>
+									<img src="./src/img/EdSheeran.png" alt="Shape Of You" />
+									<img src="./src/img/SummerTime.png" alt="Summer Time" />
+									<img src="./src/img/SavageLove.png" alt="Savage Love" />
+									<img src="./src/img/Nevada.png" alt="Nevada" />
+									<img src="./src/img/ModernTalking.png" alt="Cheri Cheri Lady" />
 								</div>
 								<div class="song-list">
 									<ul style="width: 100%"></ul>
@@ -194,10 +146,7 @@
 								<div class="content">
 									<span class="number">1</span>
 									<figure class="image">
-										<img
-											src="./src/img/SavageLove.png"
-											alt="img"
-										/>
+										<img src="./src/img/SavageLove.png" alt="img" />
 									</figure>
 									<div class="info">
 										<div class="text">
@@ -214,15 +163,11 @@
 											<div class="counters">
 												<div class="moreItem">
 													<i class="icon heart"></i>
-													<p class="iconLabel">
-														1452
-													</p>
+													<p class="iconLabel"> 1452 </p>
 												</div>
 												<div class="moreItem">
 													<i class="icon play"></i>
-													<p class="iconLabel">
-														5432
-													</p>
+													<p class="iconLabel"> 5432 </p>
 												</div>
 											</div>
 										</div>
@@ -238,10 +183,7 @@
 								<div class="content">
 									<span class="number">2</span>
 									<figure class="image">
-										<img
-											src="./src/img/Nevada.png"
-											alt="img"
-										/>
+										<img src="./src/img/Nevada.png" alt="img" />
 									</figure>
 									<div class="info">
 										<div class="text">
