--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8" />
 		<meta name="theme-color" content="#FF0000" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="manifest" href="/public/manifest.json" />
+		<link rel="manifest" href="./src/public/manifest.json" />
 
 		<link rel="icon" href="./src/img/Logo.png" />
-		<link rel="apple-touch-icon" href="/public/logo/144x144.png" />
+		<link rel="apple-touch-icon" href="./src/public/logo/144x144.png" />
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.3.0/font-awesome-animation.css" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css" />
@@ -262,7 +262,31 @@
 		<script src="https://cdn.jsdelivr.net/gh/napthedev/nhaccuatui-api-full@bundle/build/bundle.js"></script>
 		<script src="./src/js/script.js"></script>
 		<script>
-			'serviceWorker' in navigator && navigator.serviceWorker.register('/sw.js');
+			'serviceWorker' in navigator && navigator.serviceWorker.register('/src/js/sw.js');
+
+			let deferredPrompt;
+
+			addEventListener('beforeinstallprompt', (e) => {
+				e.preventDefault();
+
+				deferredPrompt = e;
+
+				const btnAdd = document.querySelector('.add-to-homescreen');
+				btnAdd.style.display = 'block';
+
+				btnAdd.addEventListener('click', (e) => {
+					deferredPrompt.prompt();
+					deferredPrompt.userChoice.then((result) => {
+						if (result.outcome === 'accepted') console.log('User accept prompt');
+
+						deferredPrompt = null;
+					});
+				});
+			});
+
+			addEventListener('appinstalled', (e) => {
+				console.log('Installed');
+			});
 		</script>
 	</body>
 </html>
