--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 		<script src="https://cdn.jsdelivr.net/gh/napthedev/nhaccuatui-api-full@bundle/build/bundle.js"></script>
 		<script src="./src/js/script.js"></script>
 		<script>
-			'serviceWorker' in navigator && navigator.serviceWorker.register('/Music-Player/src/js/sw.js');
+			'serviceWorker' in navigator && navigator.serviceWorker.register('/Music-Player/sw.js');
 
 			let deferredPrompt;
 
