feat: ✨ update readme with screenshots

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<title>YR Player</title>
 	</head>
 	<body data-theme="dark">
-		<div class="add-to-homescreen">Install App</div>
+		<!-- <div class="add-to-homescreen">Install App</div> -->
 
 		<div class="main-container">
 			<div class="main-content">
